v 0.1.4 - updated namespace to avoid collision with polylang pro - updated style in order to get the button contente vertically aligned - removed the default padding (in any case, it can be easily added with gutenberg controls) - script and styles enqueue enhancement

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,9 +1,9 @@
 // the language switcher style
-.wp-block-polylang-language-switcher {
+.wp-block-polylang-advanced-language-switcher {
   border: 0;
   cursor: pointer;
   display: flex;
-  gap: 0.5rem;
+  gap: var(--wp--preset--spacing--40);
   line-height: 1;
   align-items: center;
 
