fixes frontend style

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,7 +1,7 @@
 // the language switcher style
-.pls-language-switcher,
 .wp-block-polylang-advanced-language-switcher {
   border: 0;
+  background: transparent;
   appearance: none;
   cursor: pointer;
   display: flex;
