updated region selector (handles both select and optgroups)

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -105,6 +105,10 @@
 			font-size: 1em;
 			border: 1px solid #ccc;
 			border-radius: 3px;
+
+			option.single-option {
+				font-weight: 700;
+			}
 		}
 	}
 
