fixes an error that was being marked in pagespeed for item not accessible

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -80,6 +80,8 @@
 			height: $header-height;
 			line-height: $header-height;
 			cursor: pointer;
+			border: none;
+			background: transparent;
 		}
 	}
 
