--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,7 +25,7 @@
 	}
 }
 
-.pls-overlay {
+.vls-overlay {
 	position: fixed; /* Sit on top of the page content */
 	display: none; /* Hidden by default */
 	width: 100%; /* Full width (cover the whole page) */
@@ -54,7 +54,7 @@
 	}
 }
 
-.pls-card {
+.vls-card {
 	background-color: $white;
 	max-width: 100%;
 	width: $card-width;
@@ -73,7 +73,7 @@
 			line-height: $header-height;
 		}
 
-		.pls-button-close {
+		.vls-button-close {
 			position: absolute;
 			right: 1em;
 			top: 0;
@@ -100,7 +100,7 @@
 			font-size: 1em;
 		}
 
-		.pls-block-select {
+		.vls-block-select {
 			width: 100%;
 			height: 48px;
 			padding: 10px;
@@ -119,7 +119,7 @@
 		display: flex;
 		justify-content: flex-end;
 
-		.wp-block-button__link {
+		&__link {
 			padding: 0.6em 1.6em;
 			text-transform: uppercase;
 			font-size: 1.2rem;
