--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -120,10 +120,15 @@
 		justify-content: flex-end;
 
 		&__link {
-			padding: 0.6em 1.6em;
-			text-transform: uppercase;
-			font-size: 1.2rem;
 			cursor: pointer;
+			background: var(--wp--preset--color--primary)!important;
+			border: 2px solid var(--wp--preset--color--primary);
+			color: var(--wp--preset--color--background)!important;
+			font-size: 1.2rem;
+			border-radius: 3rem;
+			font-weight: 600;
+			padding: 0.8rem 2rem;
+			text-transform: uppercase;
 		}
 	}
 }
