--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,7 +3,6 @@
 
 // MODAL WINDOW
 .pls {
-
 	// avoid transition animation when the modal was shown
 	&-no-animations {
 		transition-duration: 0ms;
@@ -29,7 +28,7 @@
 	position: fixed; /* Sit on top of the page content */
 	display: none; /* Hidden by default */
 	width: 100%; /* Full width (cover the whole page) */
-	height: 100vh; /* Full height (cover the whole page) */
+	height: 100%; /* Full height (cover the whole page) */
 	top: 0;
 	left: 0;
 	right: 0;
@@ -39,26 +38,37 @@
 	cursor: pointer; /* Add a pointer on hover */
 	justify-content: center;
 	align-items: center;
+	pointer-events: none;
+
+
+	&.active {
+		display: block;
+		pointer-events: auto;
+	}
 
 	&-card {
+		position: fixed;
 		z-index: 1100;
+		top: 40vh;
 		border-radius: 2px;
+		left: 50%;
+		transform: scale(0.99) translate(-50%, -55%);
 		opacity: 0;
 		box-shadow: 0 8px 40px -30px rgba(0, 0, 0, 1);
 		transform-origin: top;
 		transition-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
 		transition-duration: 500ms;
 		transition-property: opacity, transform;
-		transform: scale(0.99) translateY(-0.75em);
-
-
-		&.active {
-			transform: scale(1) translateY(0);
-			opacity: 1;
-		}
+		pointer-events: none;
 
 		.card-content {
 			padding: $padding;
+		}
+
+		&.active {
+			pointer-events: auto;
+			transform: scale(1) translate(-50%, -50%);
+			opacity: 1;
 		}
 	}
 }
@@ -130,9 +140,9 @@
 
 		&__link {
 			cursor: pointer;
-			background: var(--wp--preset--color--primary)!important;
+			background: var(--wp--preset--color--primary) !important;
 			border: 2px solid var(--wp--preset--color--primary);
-			color: var(--wp--preset--color--background)!important;
+			color: var(--wp--preset--color--background) !important;
 			font-size: 1.2rem;
 			border-radius: 3rem;
 			font-weight: 600;
