--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -9,7 +9,7 @@ $mq__smaller-than-tablet: "(max-width: 600px)";
 // $padding-half = var(--size__padding-half)
 // $padding-small = var(--size__padding-small)
 
-$white : white;
+$white : #fff;
 $margin :  8px;
 $margin-large : 16px;
 $gray-400 : #888;
